<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Aliwo</string>
    <!-- General -->
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="basket">Basket</string>
    <string name="profile">Profile</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="cancel">Calcel</string>
    <string name="yes">Yes</string>
    <string name="all">All</string>
    <string name="mansCloting">Men  s Clothing</string>
    <string name="womensClothing">Women  s Clothing</string>
    <string name="electronics">Electronics</string>
    <string name="jewelery">Jewelery</string>
    <string name="add_basket">Add Basket</string>
    <string name="added_basket">Added Basket</string>
    <string name="product_detail">Product Detail</string>
    <string name="login">Log In</string>
    <string name="pasword">Pasword</string>
    <string name="accept">Buy</string>
    <string name="search_category">Search by category</string>

    <!-- Sign Up Activity -->
    <string name="password_repeat">Retype Password</string>
    <string name="password_not_same">Password and password Again not same</string>
    <string name="empty_field">Please fill in all fields</string>
    <string name="user_agreement">User Agreement</string>
    <string name="no_user_agreement">Please confirm the user agreement</string>
    <string name="a"><big><b>1.Parties</b></big> \n\n
      <b>a)</b> Members who are members of the application\n
      <b>b)</b> Aliwo application management \n\n

        <big><b>2.Definitions</b></big> \n\n
        &#160; &#160; &#160; &#160;<b>Users : </b> Real Persons who have become a member by using the user
        agreement open to the applicationr\n
         &#160; &#160; &#160; &#160;<b>Seller : </b> Natural or legal persons who approve and accept private seller
        agreements and legal obligations and sell in-app products\n
         &#160; &#160; &#160; &#160;<b>Legal Responsibilities : </b> Accepting the responsibilities for the breaches
        and losses arising from the rules and norms of law and being responsible for the obligations  \n
         &#160; &#160; &#160; &#160;<b>Aliwo Management : </b> Permanent owner of all managerial and design rights in the application
        and representation of the Aliwo application board of directors and the Aliwo application\n\n

        <big><b>3.Rights and Obligations of the Parties</b></big>\n\n
        <b>3.1.</b> With the acceptance of the contract; Aliwo application confirms the accuracy of the information in the membership
        section and in the section of filling in personal information after membership and the member is responsible for the problems
        caused by the error of personal data..\n
       <b>3.2.</b> The member is responsible for the membership account created, any password sharing and related problems and
        responsibilities concern the member. \n
        <b>3.3.</b> The right of operation and functioning of the user account belongs to the user, Aliwo administration has
        the right to delete or freeze the account.\n
        <b>3.4.</b> All responsibility in the product review section belongs to the user, Aliwo management is not responsible
        for any legal issues.\n
        <b>3.5.</b> Aliwo management is responsible for viruses or problems through the application, the user is responsible for
        viruses and problems outside the Aliwo application.\n
       <b>3.6.</b> Approval of this agreement declares that all individual clauses have been read and understood and that the
        member is responsible for any liability.
       </string>

    <!-- Login Activity -->
    <string name="with">With</string>
    <string name="forgot_passwrod">Forgot Password</string>
    <string name="email_password_empty">Email and password are required</string>
    <string name="reset_password">Password reset link sent to email</string>
    <string name="enter_email">Please enter your e-mail </string>

    <!-- Category Activity -->
    <string name="sort">Sort</string>
    <string name="default_sorting">Default Sorting</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="highest_price">Highest Price</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="lowest_rated">Lowest Rated</string>
    <string name="apply">Apply</string>

    <!--Profile Fragment-->
    <string name="user_information">User Information</string>
    <string name="account_settings">Account Settings</string>
    <string name="log_out">Log Out</string>

    <!-- User Info Fragment -->
    <string name="update_info">Update Info</string>

    <!-- Account Settings Fragment -->
    <string name="change_email">Change Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="email_verification">Email Verification</string>
    <string name="account_delete">Delete Account</string>

    <!-- Change Email Fragment -->
    <string name="new_email">New Email</string>
    <string name="new_email_again">New Email Again</string>
    <string name="email_not_same">email and new email again not same</string>

    <!-- Change Password Fragment -->
    <string name="first_verify_your_email">First verify your email</string>
    <string name="go"><u>Go -></u></string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>
    <string name="logged_in_with_google">logged in with google</string>
    <string name="password_updated">Password Updated</string>

    <!-- Email Verification Fragment -->
    <string name="email_already_verified">Email already verified</string>
    <string name="verification_link_sent">Verification Link Sent</string>

    <!-- Delete Account Fragment -->
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_message">* All storage data in your account will be deleted
        \n* Purchased products cannot be returned
        \n* Deleted account cannot be restored</string>
    <string name="delete_account_alert_message">Are you sure you want to delete your account?</string>
    <string name="enter_info_correctly">Enter the information correctly</string>

    <!-- Google Json Client Id -->
    <string name="google_json_client_id" translatable="false">cliendıd</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sorry_wrong">Sorry, something went wrong</string>
    <string name="buy_fast">Buy Fast</string>
    <string name="complete_shopping">Complete Shopping</string>

</resources>