<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_dialog_shape">

        <ImageButton
            android:id="@+id/fragmentCategoryBottomSheetImbCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/asset_cancel" />

        <TextView
            android:id="@+id/fragmentCategoryBottomSheetTxvSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sort"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/fragmentCategoryBottomSheetRg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentCategoryBottomSheetTxvSort">

            <RadioButton
                android:id="@+id/fragmentCategoryBottomSheetRbDefaultSorting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:checked="true"
                android:paddingStart="10dp"
                android:text="@string/default_sorting"
                android:textColor="@color/light_black"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/fragmentCategoryBottomSheetRbLowestPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:button="@drawable/radio_button_selector"
                android:paddingStart="10dp"
                android:text="@string/lowest_price"
                android:textColor="@color/light_black"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/fragmentCategoryBottomSheetRbHighestPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:button="@drawable/radio_button_selector"
                android:paddingStart="10dp"
                android:text="@string/highest_price"
                android:textColor="@color/light_black"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/fragmentCategoryBottomSheetRbLowestRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:button="@drawable/radio_button_selector"
                android:paddingStart="10dp"
                android:text="@string/lowest_rated"
                android:textColor="@color/light_black"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/fragmentCategoryBottomSheetRbHighestRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:button="@drawable/radio_button_selector"
                android:paddingStart="10dp"
                android:text="@string/highest_rated"
                android:textColor="@color/light_black"
                android:textSize="14sp" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>