<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragmentChangePasswordToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="5dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/light_black"
        tools:layout_editor_absoluteX="1dp"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <TextView
        android:id="@+id/fragmentChangePasswordTxvWithGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/logged_in_with_google"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentChangePasswordToolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/fragmentChangePasswordCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentChangePasswordToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fragmentChangePasswordBtnChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:background="@color/general_application_color"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragmentChangePasswordEdtNewPasswordAgain" />

            <EditText
                android:id="@+id/fragmentChangePasswordEdtNewPassword"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@drawable/edittext_shape"
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/fragmentChangePasswordEdtNewPasswordAgain"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_shape"
                android:ems="10"
                android:hint="@string/new_password_again"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragmentChangePasswordEdtNewPassword"
                tools:ignore="TextFields" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>