<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.fragment.SignUpFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/fragmentSignUpCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:outlineProvider="none"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fragmentSignUpEdtEMail"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edittext_shape"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="254"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragmentSignUpTextInputLayoutPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragmentSignUpEdtEMail"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/fragmentSignUpEdtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edittext_shape"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragmentSignUpTextInputLayoutPasswordAgain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragmentSignUpTextInputLayoutPassword"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/fragmentSignUpEdtPasswordAgain"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edittext_shape"
                    android:ems="10"
                    android:hint="@string/password_repeat"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/fragmentSignUpBtnSingUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/general_application_color"
                android:text="@string/sing_up"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragmentSignUpChbUserAgreement" />

            <CheckBox
                android:id="@+id/fragmentSignUpChbUserAgreement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:button="@drawable/checkbox_selector"
                android:paddingStart="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragmentSignUpTextInputLayoutPasswordAgain" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>